--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -1,9 +1,19 @@
-django==4.2.11
-django-environ==0.11.2
-django-cors-headers==4.3.1
-djangorestframework==3.15.1
-pillow==10.3.0
-django-storages==1.14.2
-psycopg2==2.9.9
 asgiref==3.8.1
-sqlparse==0.4.4 
+click==8.1.7
+colorama==0.4.6
+dj-database-url==2.1.0
+Django==4.2.11
+django-cors-headers==4.3.1
+django-environ==0.11.2
+django-storages==1.14.2
+djangorestframework==3.15.1
+gunicorn==21.2.0
+h11==0.14.0
+packaging==24.0
+pillow==10.3.0
+psycopg-binary==3.1.18
+psycopg2==2.9.9
+sqlparse==0.4.4
+typing_extensions==4.11.0
+tzdata==2024.1
+uvicorn==0.29.0
