--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -7,7 +7,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-cryptography==42.0.5
+protobuf==4.21.12
 defusedxml==0.8.0rc2
 dj-database-url==2.1.0
 Django==4.2.11
