--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -7,7 +7,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-protobuf==4.21.12
+cryptography==42.0.5
 defusedxml==0.8.0rc2
 dj-database-url==2.1.0
 Django==4.2.11
@@ -24,6 +24,7 @@ idna==3.7
 oauthlib==3.2.2
 packaging==24.0
 pillow==10.3.0
+protobuf==4.21.12
 psycopg-binary==3.1.18
 psycopg2==2.9.9
 pycparser==2.22
